txt, pdf, epub并于book

--- a/src/config.properties
+++ b/src/config.properties
@@ -1,7 +1,6 @@
 htmlDir=../html
-pdfDir=../pdf
+bookDir=../book
 imageDir=../gallery
-txtDir=../txt
 audioDir=../audio
 videoDir=../video
 wallpaperDir=../gallery/bg
